update: django structure with toc
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/packages/django.org
+++ b/packages/django.org
@@ -2,6 +2,21 @@
 #+BEGIN_QUOTE
 The Web Framework for perfectionists with deadlines
 #+END_QUOTE
+*** Table of Contents
+- [[#Quick Install][Quick Install]]
+- [[#Basic Structure][Basic Structure]]
+- [[#Model][Model]]
+- [[#View][View]]
+- [[#Template][Template]]
+- [[#Forms][Forms]]
+- [[#Development Process][Development Process]]
+- [[#Admin][Admin]]
+- [[#Security][Security]]
+- [[#Internationalization & Localization][Internationalization & Localization]]
+- [[#Performance & Optimization][Performance & Optimization]]
+- [[#Geographic framework][Geographic framework]]
+- [[#Common Web Application Tools][Common Web Application Tools]]
+- [[#Other Core Functionalities][Other Core Functionalities]]
 
 *** Quick Install
 1. check python is up and running
@@ -57,3 +72,15 @@ mysite/
         admin/
             base_site.html
 #+END_EXAMPLE
+*** Model
+*** View
+*** Template
+*** Forms
+*** Development Process
+*** Admin
+*** Security
+*** Internationalization & Localization
+*** Performance & Optimization
+*** Geographic framework
+*** Common Web Application Tools
+*** Other Core Functionalities
