c# <type>: (If applied, this commit will...) <subject> (Max 50 char) updaate: django structure
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/packages/django.org
+++ b/packages/django.org
@@ -16,7 +16,27 @@ The Web Framework for perfectionists with deadlines
 - [[#Performance & Optimization][Performance & Optimization]]
 - [[#Geographic framework][Geographic framework]]
 - [[#Common Web Application Tools][Common Web Application Tools]]
+  - [[#Authentication][Authentication]]
+  - [[#Caching][Caching]]
+  - [[#Logging][Logging]]
+  - [[#Sending emails][Sending emails]]
+  - [[#Syndication feeds (RSS/Atom)][Syndication feeds (RSS/Atom)]]
+  - [[#Pagination][Pagination]]
+  - [[#Messages framework][Messages framework]]
+  - [[#Serialization][Serialization]]
+  - [[#Sessions][Sessions]]
+  - [[#Sitemaps][Sitemaps]]
+  - [[#Static files management][Static files management]]
+  - [[#Data validation][Data validation]]
 - [[#Other Core Functionalities][Other Core Functionalities]]
+  - [[#Conditional content processing][Conditional content processing]]
+  - [[#Content types and generic relations][Content types and generic relations]]
+  - [[#Flatpages][Flatpages]]
+  - [[#Redirects][Redirects]]
+  - [[#Signals][Signals]]
+  - [[#System check framework][System check framework]]
+  - [[#The sites framework][The sites framework]]
+  - [[#Unicode in Django][Unicode in Django]]
 
 *** Quick Install
 1. check python is up and running
@@ -83,4 +103,5 @@ mysite/
 *** Performance & Optimization
 *** Geographic framework
 *** Common Web Application Tools
+
 *** Other Core Functionalities
