add: link readme
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/README.org
+++ b/README.org
@@ -31,7 +31,7 @@
 :CUSTOM_ID: language-reference
 :END:
 - Architecture
-- Modules and Packages
+- [[./packages/modules_and_packages.org][Modules and Packages]]
 *** Web Frameworks
 :PROPERTIES:
 :CUSTOM_ID: web-frameworks
