--- a/README.org
+++ b/README.org
@@ -30,7 +30,14 @@
 :PROPERTIES:
 :CUSTOM_ID: language-reference
 :END:
-- Architecture
+- File Extensions
+| .*  | desc                                  |
+|-----+---------------------------------------|
+| py  | normal extension for a py source file |
+| pyc | compiled bytecode                     |
+| pyd | windows dll file                      |
+| pyw | python script for windows             |
+| pyz | python script archive                 |
 - [[./packages/modules_and_packages.org][Modules and Packages]]
 *** Web Frameworks
 :PROPERTIES:
