update: language-reference > file-extensions
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/README.org
+++ b/README.org
@@ -31,7 +31,7 @@
 :CUSTOM_ID: language-reference
 :END:
 - File Extensions
-| .ext | desc                                  |
+| .ext | description                           |
 |------+---------------------------------------|
 | .py  | normal extension for a py source file |
 | .pyc | compiled bytecode                     |
