--- a/README.org
+++ b/README.org
@@ -41,6 +41,8 @@
   | .pyw | python script for windows             |
   | .pyz | python script archive                 |
 - [[./packages/modules_and_packages.org][Modules and Packages]]
+- [[./packages/object_oriented_programming.org][Object Oriented Programming]]
+
 *** Web Frameworks
 :PROPERTIES:
 :CUSTOM_ID: web-frameworks
