--- a/README.org
+++ b/README.org
@@ -34,6 +34,7 @@
 - [[./packages/language-reference/architecture.org][Architecture]]
 - [[./packages/language-reference/file-extensions.org][File Extensions]]
 - [[./packages/language-reference/modules_and_packages.org][Modules and Packages]]
+- [[./packages/language-reference/lexical-analysis.org][Lexical Analysis]]
 - [[./packages/language-reference/list.org][List]]
 - [[./packages/language-reference/object_oriented_programming.org][Object Oriented Programming]]
 - [[./packages/language-reference/strings.org][Strings]]
