--- a/packages/language-reference/lexical-analysis.org
+++ b/packages/language-reference/lexical-analysis.org
@@ -46,6 +46,37 @@ stringprefix    ::= "r"  |
 		    "FR"
 shortstring     ::= "'" shortstringitem* "'" | '"' shortstringitem* '"'
 longstring      ::= "'''" longstringitem* "'''" | '"""' longstringitem* '"""'
-
-
+shortstringitem ::=  shortstringchar | stringescapeseq
+longstringitem  ::=  longstringchar | stringescapeseq
+shortstringchar ::=  <any source character except "\" or newline or the quote>
+longstringchar  ::=  <any source character except "\">
+stringescapeseq ::=  "\" <any source character>
 #+END_SRC
+
+#+BEGIN_SRC python
+bytesliteral   ::=  bytesprefix(shortbytes | longbytes)
+bytesprefix    ::=  "b" | "B" | "br" | "Br" | "bR" | "BR" | "rb" | "rB" | "Rb" | "RB"
+shortbytes     ::=  "'" shortbytesitem* "'" | '"' shortbytesitem* '"'
+longbytes      ::=  "'''" longbytesitem* "'''" | '"""' longbytesitem* '"""'
+shortbytesitem ::=  shortbyteschar | bytesescapeseq
+longbytesitem  ::=  longbyteschar | bytesescapeseq
+shortbyteschar ::=  <any ASCII character except "\" or newline or the quote>
+longbyteschar  ::=  <any ASCII character except "\">
+bytesescapeseq ::=  "\" <any ASCII character>
+#+END_SRC
+
+**** Integer Literals
+#+BEGIN_SRC python
+integer      ::=  decinteger | bininteger | octinteger | hexinteger
+decinteger   ::=  nonzerodigit (["_"] digit)* | "0"+ (["_"] "0")*
+bininteger   ::=  "0" ("b" | "B") (["_"] bindigit)+
+octinteger   ::=  "0" ("o" | "O") (["_"] octdigit)+
+hexinteger   ::=  "0" ("x" | "X") (["_"] hexdigit)+
+nonzerodigit ::=  "1"..."9"
+digit        ::=  "0"..."9"
+bindigit     ::=  "0" | "1"
+octdigit     ::=  "0"..."7"
+hexdigit     ::=  digit | "a"..."f" | "A"..."F"
+#+END_SRC
+*** Standard Type Hierarchy
+[[https://flylib.com/books/2/725/1/html/2/files/lpy2_0703.gif]]
