--- a/packages/language-reference/cons.org
+++ b/packages/language-reference/cons.org
@@ -3,3 +3,4 @@
 2. lacks user defined value types
 3. lacks third party tools and documentation of languages like Java and PHP.(?)
 4. lets you write variables that aren't declared and even accidentally overwrite a variable without erroring.
+5. deceptively easy to start with, but to write serious code you have to know hidden stuff.
