update: file-extensions
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/packages/language-reference/file-extensions.org
+++ b/packages/language-reference/file-extensions.org
@@ -3,6 +3,7 @@
 |------+---------------------------------------|
 | .py  | normal extension for a py source file |
 | .pyc | compiled bytecode                     |
+| .pyi | python interface                      |
 | .pyd | windows dll file                      |
 | .pyw | python script for windows             |
 | .pyz | python script archive                 |
