update: Readme - bound and unbound methods
>>> Why is this Change Necessary?:

>>> This change address the need by:

>>> What Side Effects does this change have?

>>> Issue #None

--- a/README.org
+++ b/README.org
@@ -46,6 +46,8 @@
 - [[./packages/language-reference/exceptions.org][Exceptions]]
 - [[./packages/language-reference/comparisons.org][Comparisons]]
 - [[./packages/language-reference/operations.org][Operations]]
+- [[./packages/language-reference/bound-and-unbound-methods.org][Bound and Unbound Methods]]
+- [[./packages/language-reference/metaclass.org][Metaclass]]
 - Context Managers
 - Generators
 - Decorators
