standard libs & concurrency

--- a/examples/text_processing_services_examples/string.ipynb
+++ b/examples/text_processing_services_examples/string.ipynb
@@ -229,10 +229,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified ID Pattern:\n",
+      "\n",
+      "    Delimeter: %%\n",
+      "    Replaced: %with_underscore\n",
+      "    Ignored: %notunderscored\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import string\n",
+    "\n",
+    "template_text = '''\n",
+    "    Delimeter: %%\n",
+    "    Replaced: %with_underscore\n",
+    "    Ignored: %notunderscored\n",
+    "'''\n",
+    "\n",
+    "d = {\n",
+    "    'with_underscore': 'replaced',\n",
+    "    'notunderscored': 'not replaced'    \n",
+    "}\n",
+    "\n",
+    "class MyTemplate(string.Template):\n",
+    "    delimeter = '%'\n",
+    "    idpattern = '[a-z]+_[a-z]+'\n",
+    "    \n",
+    "t = MyTemplate(template_text)\n",
+    "print('Modified ID Pattern:')\n",
+    "print(t.safe_substitute(d))"
+   ]
   }
  ],
  "metadata": {
